--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-scroll": "^1.8.9",
+    "sweetalert2": "^11.7.28",
     "zod": "^3.22.2"
   },
   "devDependencies": {
